# fastapi-monorepo

./: README.md  pyproject.toml
libs/plus/: pyproject.toml
libs/plus/plus/: __init__.py
services/first/: .python-version  pyproject.toml
services/first/app/: main.py
services/second/: pyproject.toml
