[tool.poetry]
name = "first"
version = "0.1.0"
description = ""
authors = ["jeong <jw.jeong@tilda.co.kr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
plus = { path = "../../libs/plus" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
